--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url(./Reset.css);
+@import url(./Main.css);
 @font-face {
   font-family: Bakbak One;
   src: url(./fonts/Epilogue-Regular.ttf);
