Added Blog page

--- a/Main.css
+++ b/Main.css
@@ -6,7 +6,7 @@
 
 .AboutUs_card {
   position: relative;
-  padding-left: 50px; /* Отступ для номера */
+  padding-left: 50px; 
   margin-bottom: 20px;
 }
 
@@ -16,25 +16,25 @@
   position: absolute;
   left: 0;
   top: 50%;
-  transform: translateY(-50%); /* Центрируем по вертикали */
-  font-size: 8.5em; /* Увеличиваем размер номера */
+  transform: translateY(-50%); 
+  font-size: 8.5em; 
   font-weight: bold;
   
   /* Тонкая обводка через text-shadow */
   
   text-shadow: 
-  2px 0 0 #0265DC,  /* Правая тень */
-  -2px 0 0 #0265DC, /* Левая тень */
-  0 2px 0 #0265DC,  /* Нижняя тень */
-  0 -2px 0 #0265DC; /* Верхняя тень */ 
+  2px 0 0 #0265DC,  
+  -2px 0 0 #0265DC, 
+  0 2px 0 #0265DC,  
+  0 -2px 0 #0265DC; 
 
-  color: #000000; /* Фоновый цвет номера */
+  color: #000000; 
   width: 400px;
   height: 96px;
   display: flex;
   align-items: center;
   justify-content: center;
   background: none;
-  z-index: -1; /* Отправляем номер на задний фон */
-  opacity: 50%; /* Полупрозрачный фон */
+  z-index: -1; 
+  opacity: 50%; 
 }
